<resources>
    <string name="app_name">Application</string>
    <string name="buttonFlashLight">FlashLight</string>
    <string name="buttonImageViewer">Image viewer</string>
    <string name="buttonMap">Map</string>
    <string name="buttonTimer">Timer</string>
    <string name="task_15">task #15</string>

    <string name="flash">Flash</string>
    <string name="maximum_screen_brightness">Maximum screen brightness</string>
    <string name="flashlight">Flashlight</string>
    <string name="title_activity_map">Map</string>
    <string name="map_key" translatable="false">"AIzaSyDwJnDS3tmvwhLIrHJa5TsDs7YgKX1mjLI"</string>

    <string name="secondsTimerEditText">Seconds</string>

    <string name="weather">Weather</string>

    <!--weather fragment-->\
    <string name="openWeatherMapKey" translatable="false">6c8582d03d8c5dea07f358f4683f208c</string>
    <string name="select_city">Select city</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description:</string>

    <!--SelectCityDialogFragment-->
    <string name="SelectCity">Select city</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>

    <!--WeatherFragment-->
    <string name="Today">(Today)</string>
    <string name="Tomorrow">(Tomorrow)</string>

    <string name="html_widget" formatted="false" translatable="false">
        <![CDATA[
        <center>
            <table cellpadding=0 cellspacing=0 width=240
            style="border:solid 1px #fe2020;font-family:Tahoma;font-size:14px;background-color:#fedf20">
              <tr><td>
                  <table width=100% cellpadding=0 cellspacing=0>
                    <tr>
                      <td width=8 height=30 background="https://rp5.ru/informer/htmlinfa/topshl.png"  bgcolor=#fe2020></td>
                      <td width=* align=center background="https://rp5.ru/informer/htmlinfa/topsh.png" bgcolor=#fe2020>
                        <a style="color:#ffffff; font-family:Tahoma;font-size: 12px;" href="https://rp5.ru/8452/ru">
                          <b>Ульяновск</b>
                        </a>
                      </td>
                      <td width=8 height=30 background="https://rp5.ru/informer/htmlinfa/topshr.png" bgcolor=#fe2020>
                      </td>
                    </tr>
                  </table>
                </td></tr>
              <tr>
                <td valign=top style="padding:0;">
                  <iframe src="https://rp5.ru/htmla.php?id=8452&lang=ru&um=00000&bg=%23fedf20&ft=%23ffffff&fc=%23fe2020&c=%23000000&f=Tahoma&s=14&sc=4"
                  width=100% height=277 frameborder=0 scrolling=no style="margin:0;"></iframe>
                </td></tr>
            </table>
        ]]>
    </string>

</resources>
