<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_weather_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/select_city"
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_weather_temperature_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/temperature"
        android:textColor="#04BD63"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/activity_weather_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="Description"
        android:textColor="#04BD63"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/activity_weather_button_select_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:text="Select city"
        android:textAllCaps="false"
        android:textSize="25sp" />

</LinearLayout>
